--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -8,7 +8,7 @@ div.loginBody {
     height: 100vh;
     display: grid;
     place-items: center;
-    background-image: conic-gradient(rgb(62,64,153), rgb(249,237,209),rgb(39,97,112), rgb(62,64,153));
+    /* background-image: conic-gradient(rgb(62,64,153), rgb(249,237,209),rgb(39,97,112), rgb(62,64,153)); */
 }
 
 div.loginForm {
@@ -155,6 +155,30 @@ div.directLoginDetails {
     width: 100%;
 }
 
+div.directLoginDetails>span>label.inputDivText {
+    position: absolute;
+    left: 25px;
+    padding: 0 5px;
+    transition: all 0.15s ease;
+    color: rgb(160,160,160);
+}
+
+div.directLoginDetails> span:not(:focus-within) > input:not(:placeholder-shown)~label.inputDivText,
+div.directLoginDetails> span:focus-within > label.inputDivText {
+    top: 0;
+    transform: translateY(-60%);
+    background-color: white;
+    font-size: 0.7rem;
+}
+
+div.directLoginDetails> span:not(:focus-within) > input:not(:placeholder-shown)~label.inputDivText{
+    color: rgb(100,100,100);
+}
+
+div.directLoginDetails> span:focus-within > label.inputDivText{
+    color: rgb(62, 64, 153);
+}
+
 div.directLoginDetails>span {
     border: 2px solid rgb(160, 160, 160);
     border-radius: 10px;
@@ -164,6 +188,7 @@ div.directLoginDetails>span {
     align-items: center;
     width: 100%;
     transition: all 0.15s ease-in-out;
+    position: relative;
 }
 
 div.directLoginDetails>span:focus-within {
