--- a/frontend/src/styles/error.css
+++ b/frontend/src/styles/error.css
@@ -3,86 +3,67 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #f3f2ff;
 }
-
-.error-wrapper {
-  min-height: 100vh;
+.error-wrapper{
+  width: 100%;
+  height: 90vh;
+}
+.error-card {
+  width: 100%;
+  height: 90%;
+  padding: 15px;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
-  background-color: #f3f2ff;
-}
-
-.error-card {
-  background: white;
-  border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
-  max-width: 1000px;
-  width: 100%;
-  padding: 2rem;
-  border: 3px solid #5f2eea;
-}
-
-/* Header */
-.error-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
-}
-
-.error-nav {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-}
-
-.error-nav a {
-  text-decoration: none;
-  color: #5f2eea;
-  font-weight: bold;
-  transition: color 0.3s;
-}
-
-.error-nav a:hover {
-  color: #3d1cbb; /* Darker shade on hover */
-}
-
-/* Search */
-.search-container {
-  display: flex;
-  align-items: center;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  padding: 0.5rem 1rem;
-  background-color: white;
-}
-
-.search-container input {
-  border: none;
-  outline: none;
-  font-size: 1rem;
-  background: transparent;
 }
 
 /* Main Content */
 .error-main {
+  width: 90%;
+  max-width: 1200px;
+  height: 90%;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1.2rem;
   flex-wrap: wrap;
-  padding: 2rem 0;
+  padding: 20px 0;
   text-align: left;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.error-image{
+  position: relative;
 }
 
 .error-image img {
+  position: relative;
   max-width: 100%;
   width: 320px;
   border-radius: 12px;
+  z-index: 10;
+}
+.error-image::before, 
+.error-image::after{
+  content:'';
+  position: absolute;
+  background-color: #5f2eea;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  opacity: 0.4;
+  z-index: 0;
+}
+.error-image::before{
+  left: 0;
+  top: 0;
+  transform: translateY(-10%);
+}
+.error-image::after{
+  bottom: 0;
+  right: 0;
+  transform: translateY(10%);
 }
 
 .error-text {
@@ -113,6 +94,13 @@ body {
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+.error-text button a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-decoration: none;
 }
 
 .error-text button:hover {
